add company mentions network

--- a/Code/Exploratory Data Analysis/Doc2Vec_Network/Visualize_Nodes_Edges.ipynb
+++ b/Code/Exploratory Data Analysis/Doc2Vec_Network/Visualize_Nodes_Edges.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[5933 rows x 603 columns]"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "[530 rows x 601 columns]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "[140185 rows x 3 columns]"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        "[886 rows x 2 columns]"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1186,27 +1186,27 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>773</th>\n",
+       "      <th>772</th>\n",
        "      <td>XRAY</td>\n",
        "      <td>Health Care</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>795</th>\n",
+       "      <th>794</th>\n",
        "      <td>XYL</td>\n",
        "      <td>Industrials</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>796</th>\n",
+       "      <th>795</th>\n",
        "      <td>YUM</td>\n",
        "      <td>Consumer Discretionary</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>816</th>\n",
+       "      <th>815</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>Information Technology</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>821</th>\n",
+       "      <th>820</th>\n",
        "      <td>ZTS</td>\n",
        "      <td>Health Care</td>\n",
        "    </tr>\n",
@@ -1223,16 +1223,16 @@
        "23     ABC             Health Care\n",
        "46     ABG  Consumer Discretionary\n",
        "..     ...                     ...\n",
-       "773   XRAY             Health Care\n",
-       "795    XYL             Industrials\n",
-       "796    YUM  Consumer Discretionary\n",
-       "816   ZBRA  Information Technology\n",
-       "821    ZTS             Health Care\n",
+       "772   XRAY             Health Care\n",
+       "794    XYL             Industrials\n",
+       "795    YUM  Consumer Discretionary\n",
+       "815   ZBRA  Information Technology\n",
+       "820    ZTS             Health Care\n",
        "\n",
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1248,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1366,7 @@
        "[499 rows x 3 columns]"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
        "[140185 rows x 7 columns]"
       ]
      },
-     "execution_count": 270,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1838,7 +1838,7 @@
        "[2804 rows x 7 columns]"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1881,42 +1881,55 @@
       "113820                         M/I Homes, Inc.   \n",
       "9054                                 AAR CORP.   \n",
       "\n",
-      "                                    Target    weight        Type  \n",
-      "137593  United States Cellular Corporation  0.995916  Undirected  \n",
-      "49022                         Meritor Inc.  0.993173  Undirected  \n",
-      "98186       Suburban Propane Partners L.P.  0.986140  Undirected  \n",
-      "98081                NewMarket Corporation  0.985651  Undirected  \n",
-      "120588      Suburban Propane Partners L.P.  0.985521  Undirected  \n",
-      "...                                    ...       ...         ...  \n",
-      "41365              Valmont Industries Inc.  0.934033  Undirected  \n",
-      "78197                         Meritor Inc.  0.934026  Undirected  \n",
-      "47870                                  SWX  0.934016  Undirected  \n",
-      "113820             Valmont Industries Inc.  0.934015  Undirected  \n",
-      "9054           H&E Equipment Services Inc.  0.934006  Undirected  \n",
+      "                                    Target    weight ticker1 ticker2  \\\n",
+      "137593  United States Cellular Corporation  0.995916     TDS     USM   \n",
+      "49022                         Meritor Inc.  0.993173     CMI    MTOR   \n",
+      "98186       Suburban Propane Partners L.P.  0.986140   IMKTA     SPH   \n",
+      "98081                NewMarket Corporation  0.985651   IMKTA     NEU   \n",
+      "120588      Suburban Propane Partners L.P.  0.985521     NEU     SPH   \n",
+      "...                                    ...       ...     ...     ...   \n",
+      "41365              Valmont Industries Inc.  0.934033    CCLP     VMI   \n",
+      "78197                         Meritor Inc.  0.934026    FLEX    MTOR   \n",
+      "47870                                  SWX  0.934016    CLMT     SWX   \n",
+      "113820             Valmont Industries Inc.  0.934015     MHO     VMI   \n",
+      "9054           H&E Equipment Services Inc.  0.934006     AIR    HEES   \n",
       "\n",
-      "[2804 rows x 4 columns]\n"
+      "              Type  \n",
+      "137593  Undirected  \n",
+      "49022   Undirected  \n",
+      "98186   Undirected  \n",
+      "98081   Undirected  \n",
+      "120588  Undirected  \n",
+      "...            ...  \n",
+      "41365   Undirected  \n",
+      "78197   Undirected  \n",
+      "47870   Undirected  \n",
+      "113820  Undirected  \n",
+      "9054    Undirected  \n",
+      "\n",
+      "[2804 rows x 6 columns]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22092\\1130782776.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2396\\3516206483.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'cosine_similarity': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22092\\1130782776.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2396\\3516206483.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  nw_cols['Source'].fillna(cs_df_w_more_98['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22092\\1130782776.py:7: SettingWithCopyWarning: \n",
+      "  nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2396\\3516206483.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  nw_cols['Target'].fillna(cs_df_w_more_98['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22092\\1130782776.py:9: SettingWithCopyWarning: \n",
+      "  nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2396\\3516206483.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1927,12 +1940,12 @@
    ],
    "source": [
     "# Keep company1, company2, cosine_similarity\n",
-    "nw_cols = cs_df_w_more_98[['company1', 'company2', 'cosine_similarity']]\n",
+    "nw_cols = cs_df_w_more_98[['company1', 'company2', 'cosine_similarity', 'ticker1', 'ticker2']]\n",
     "# Rename to 'Source', 'Target', 'Weight'\n",
     "nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'cosine_similarity': 'weight'}, inplace=True)\n",
     "# Where missing, fill company1 with ticker1 and company2 with ticker2\n",
-    "nw_cols['Source'].fillna(cs_df_w_more_98['ticker1'], inplace=True)\n",
-    "nw_cols['Target'].fillna(cs_df_w_more_98['ticker2'], inplace=True)\n",
+    "nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
+    "nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
     "# Add column 'Type' with value 'Undirected'\n",
     "nw_cols['Type'] = 'Undirected'\n",
     "# Limit to just node cols\n",
@@ -1948,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1983,10 +1996,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22d1a0498d0>"
+       "<IPython.lib.display.IFrame at 0x230bdc5ea50>"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
