firm company mentions network

--- a/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
+++ b/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize Nodes Edges\n",
+    "# Visualize Firm Nodes Edges\n",
     "\n",
-    "Visualize network of company mentions"
+    "Visualize network of company mentions\n",
+    "\n",
+    "This notebook aggregates mentions at the firm level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
        "[3305 rows x 6 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
        "[1286 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +473,7 @@
        "[1221 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +643,7 @@
        "[886 rows x 2 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -673,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +781,7 @@
        "[499 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +915,7 @@
        "[499 rows x 3 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1115,7 @@
        "[1221 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1184,22 +1186,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16736\\2287246693.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'count': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16736\\2287246693.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16736\\2287246693.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_16736\\2287246693.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15860\\2287246693.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1231,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1250,7 @@
        "        <iframe\n",
        "            width=\"100%\"\n",
        "            height=\"600px\"\n",
-       "            src=\"Company_Mentions_Network.html\"\n",
+       "            src=\"Firm_Company_Mentions_Network.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "            \n",
@@ -1256,10 +1258,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2137dd949d0>"
+       "<IPython.lib.display.IFrame at 0x1bcc9cd8710>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,7 +1275,7 @@
     "pvn.show_buttons(filter_=['physics'])\n",
     "# use repulsion\n",
     "pvn.repulsion(node_distance=100)\n",
-    "pvn.show('Company_Mentions_Network.html')"
+    "pvn.show('Firm_Company_Mentions_Network.html')"
    ]
   }
  ],
