remove date variables

--- a/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-05T15:44:15.747743Z",
@@ -60,7 +60,22 @@
      "shell.execute_reply": "2024-04-05T15:44:15.754374Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reportedCurrency\n",
+      "acceptedDate_balance_sheet\n",
+      "acceptedDate_cash_flow_statement\n",
+      "acceptedDate_income_statement\n",
+      "financial_statement_date\n",
+      "filingDate\n",
+      "Sector\n",
+      "rating_on_previous_fixed_quarter_date\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the column names and mapping\n",
     "numeric_feature_columns, cat_feature_columns, target_column, custom_mapping = get_column_names_and_mapping(model_name)"
@@ -68,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-05T15:44:15.760463Z",
@@ -82,84 +97,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "one-hot-encoding order\n",
       "preprocessor\n",
-      "['num__cashAndCashEquivalents' 'num__shortTermInvestments'\n",
-      " 'num__cashAndShortTermInvestments' 'num__netReceivables'\n",
-      " 'num__inventory_balance_sheet' 'num__otherCurrentAssets'\n",
-      " 'num__totalCurrentAssets' 'num__propertyPlantEquipmentNet'\n",
-      " 'num__goodwill' 'num__intangibleAssets'\n",
-      " 'num__goodwillAndIntangibleAssets' 'num__longTermInvestments'\n",
-      " 'num__taxAssets' 'num__otherNonCurrentAssets'\n",
-      " 'num__totalNonCurrentAssets' 'num__otherAssets' 'num__totalAssets'\n",
-      " 'num__accountPayables' 'num__shortTermDebt' 'num__taxPayables'\n",
-      " 'num__deferredRevenue' 'num__otherCurrentLiabilities'\n",
-      " 'num__totalCurrentLiabilities' 'num__longTermDebt'\n",
-      " 'num__deferredRevenueNonCurrent' 'num__deferredTaxLiabilitiesNonCurrent'\n",
-      " 'num__otherNonCurrentLiabilities' 'num__totalNonCurrentLiabilities'\n",
-      " 'num__otherLiabilities' 'num__capitalLeaseObligations'\n",
-      " 'num__totalLiabilities' 'num__preferredStock' 'num__commonStock'\n",
-      " 'num__retainedEarnings' 'num__accumulatedOtherComprehensiveIncomeLoss'\n",
-      " 'num__othertotalStockholdersEquity' 'num__totalStockholdersEquity'\n",
-      " 'num__totalEquity' 'num__totalLiabilitiesAndStockholdersEquity'\n",
-      " 'num__minorityInterest' 'num__totalLiabilitiesAndTotalEquity'\n",
-      " 'num__totalInvestments' 'num__totalDebt' 'num__netDebt'\n",
-      " 'num__netIncome_cash_flow_statement'\n",
-      " 'num__depreciationAndAmortization_cash_flow_statement'\n",
-      " 'num__deferredIncomeTax' 'num__stockBasedCompensation'\n",
-      " 'num__changeInWorkingCapital' 'num__accountsReceivables'\n",
-      " 'num__inventory_cash_flow_statement' 'num__accountsPayables'\n",
-      " 'num__otherWorkingCapital' 'num__otherNonCashItems'\n",
-      " 'num__netCashProvidedByOperatingActivities'\n",
-      " 'num__investmentsInPropertyPlantAndEquipment' 'num__acquisitionsNet'\n",
-      " 'num__purchasesOfInvestments' 'num__salesMaturitiesOfInvestments'\n",
-      " 'num__otherInvestingActivites' 'num__netCashUsedForInvestingActivites'\n",
-      " 'num__debtRepayment' 'num__commonStockIssued'\n",
-      " 'num__commonStockRepurchased' 'num__dividendsPaid'\n",
-      " 'num__otherFinancingActivites'\n",
-      " 'num__netCashUsedProvidedByFinancingActivities'\n",
-      " 'num__effectOfForexChangesOnCash' 'num__netChangeInCash'\n",
-      " 'num__cashAtEndOfPeriod' 'num__cashAtBeginningOfPeriod'\n",
-      " 'num__operatingCashFlow' 'num__capitalExpenditure' 'num__freeCashFlow'\n",
-      " 'num__revenue' 'num__costOfRevenue' 'num__grossProfit'\n",
-      " 'num__grossProfitRatio' 'num__researchAndDevelopmentExpenses'\n",
-      " 'num__generalAndAdministrativeExpenses'\n",
-      " 'num__sellingAndMarketingExpenses'\n",
-      " 'num__sellingGeneralAndAdministrativeExpenses' 'num__otherExpenses'\n",
-      " 'num__operatingExpenses' 'num__costAndExpenses' 'num__interestIncome'\n",
-      " 'num__interestExpense'\n",
-      " 'num__depreciationAndAmortization_income_statement' 'num__ebitda'\n",
-      " 'num__ebitdaratio' 'num__operatingIncome' 'num__operatingIncomeRatio'\n",
-      " 'num__totalOtherIncomeExpensesNet' 'num__incomeBeforeTax'\n",
-      " 'num__incomeBeforeTaxRatio' 'num__incomeTaxExpense'\n",
-      " 'num__netIncome_income_statement' 'num__netIncomeRatio' 'num__eps'\n",
-      " 'num__epsdiluted' 'num__weightedAverageShsOut'\n",
-      " 'num__weightedAverageShsOutDil' 'num__marketCap' 'num__EBIT'\n",
-      " 'num__common_plus_preferred_stock' 'num__workingCapital' 'num__Altman_Z'\n",
-      " 'num__num_transparency' 'num__gf_score' 'num__word_count'\n",
-      " 'num__num_questions' 'num__pos_score' 'num__Positiv' 'num__Negativ'\n",
-      " 'num__Strong' 'num__Weak' 'num__Active' 'num__Passive' 'num__Ovrst'\n",
-      " 'num__Undrst' 'num__TONE1' 'cat__rating_on_previous_fixed_quarter_date_A'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_AA'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_AAA'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_B'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_BB'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_BBB'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_C'\n",
+      "['num__EBIT' 'num__common_plus_preferred_stock' 'num__workingCapital' ...\n",
       " 'cat__rating_on_previous_fixed_quarter_date_CC'\n",
       " 'cat__rating_on_previous_fixed_quarter_date_CCC'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_D'\n",
-      " 'cat__Sector_Communication Services' 'cat__Sector_Consumer Discretionary'\n",
-      " 'cat__Sector_Consumer Staples' 'cat__Sector_Energy'\n",
-      " 'cat__Sector_Financials' 'cat__Sector_Health Care'\n",
-      " 'cat__Sector_Industrials' 'cat__Sector_Information Technology'\n",
-      " 'cat__Sector_Materials' 'cat__Sector_Real Estate' 'cat__Sector_Utilities']\n"
+      " 'cat__rating_on_previous_fixed_quarter_date_D']\n",
+      "  (0, 0)\t-0.5292083154557484\n",
+      "  (0, 1)\t-0.3452357944326435\n",
+      "  (0, 2)\t-0.28849489822962626\n",
+      "  (0, 3)\t1.3236777929080492\n",
+      "  (0, 4)\t-0.28882846595864414\n",
+      "  (0, 5)\t2.345294086356715\n",
+      "  (0, 6)\t-0.22753661813440856\n",
+      "  (0, 7)\t0.7025535518052359\n",
+      "  (0, 8)\t-0.33336618881781444\n",
+      "  (0, 9)\t-1.2577122590728849\n",
+      "  (0, 10)\t-0.32802069485569113\n",
+      "  (0, 11)\t-1.494733330875567\n",
+      "  (0, 12)\t-0.6628498012202643\n",
+      "  (0, 13)\t-0.3734995248030832\n",
+      "  (0, 14)\t-0.13790526090634894\n",
+      "  (0, 15)\t-0.9761690277975827\n",
+      "  (0, 16)\t-0.6242719269680083\n",
+      "  (0, 17)\t-0.2629491036802998\n",
+      "  (0, 18)\t-0.5400106266715411\n",
+      "  (0, 19)\t-0.7053855438520991\n",
+      "  (0, 20)\t0.48332880436155207\n",
+      "  (0, 21)\t-0.5426978179211365\n",
+      "  (0, 22)\t-0.6718872275297538\n",
+      "  (0, 23)\t1.582486798849689\n",
+      "  (0, 24)\t0.10556923691851272\n",
+      "  :\t:\n",
+      "  (1091, 106)\t-0.5567480416403298\n",
+      "  (1091, 107)\t-0.03164135177847265\n",
+      "  (1091, 108)\t0.1423237339834506\n",
+      "  (1091, 109)\t-0.5419241507885223\n",
+      "  (1091, 110)\t-0.05332835280675219\n",
+      "  (1091, 111)\t-0.5216313597753341\n",
+      "  (1091, 112)\t-0.5444824984935653\n",
+      "  (1091, 113)\t-0.12300703585391387\n",
+      "  (1091, 114)\t-0.107469371147271\n",
+      "  (1091, 115)\t-0.10741130669281121\n",
+      "  (1091, 116)\t-0.4424588190738282\n",
+      "  (1091, 117)\t-0.5159676577171836\n",
+      "  (1091, 118)\t-0.4271571613070683\n",
+      "  (1091, 119)\t0.16132267276334106\n",
+      "  (1091, 120)\t0.29519881085204175\n",
+      "  (1091, 121)\t-0.47293155175542717\n",
+      "  (1091, 122)\t1.1016770680315813\n",
+      "  (1091, 123)\t0.42303656602380824\n",
+      "  (1091, 124)\t-0.8458450135942251\n",
+      "  (1091, 125)\t0.07370962417347939\n",
+      "  (1091, 126)\t1.0\n",
+      "  (1091, 13577)\t1.0\n",
+      "  (1091, 14327)\t1.0\n",
+      "  (1091, 14350)\t1.0\n",
+      "  (1091, 14363)\t1.0\n"
      ]
     }
    ],
    "source": [
     "# Create matrices\n",
-    "_, X_test_scaled, _, y_test = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping)\n"
+    "_, X_test_scaled, _, y_test = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping)"
    ]
   },
   {
@@ -900,6 +899,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "capstone",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
