--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "# Perform permutation importance\n",
-    "result = permutation_importance(model, X_test_scaled.toarray(), y_test, n_repeats=1000, random_state=222, n_jobs=-1)\n",
+    "result = permutation_importance(model, X_test_scaled, y_test, n_repeats=1000, random_state=222, n_jobs=-1)\n",
     "\n",
     "# Check lengths\n",
     "print('shape X: ', X_test_scaled.shape)\n",
