--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_3_Permutation_Importance.ipynb
@@ -90,7 +90,7 @@
    ],
    "source": [
     "# Create matrices\n",
-    "_, X_test_scaled, _, y_test = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping)\n"
+    "_, X_test_scaled, _, y_test, feature_names = prepare_matrices(df, numeric_feature_columns, cat_feature_columns, target_column, custom_mapping)\n"
    ]
   },
   {
@@ -161,60 +161,8 @@
     "# Perform permutation importance\n",
     "result = permutation_importance(model, X_test_scaled, y_test, n_repeats=1000, random_state=222, n_jobs=-1)\n",
     "\n",
-    "# Check lengths\n",
-    "print('shape X: ', X_test_scaled.shape)\n",
-    "print('num + cat: ', len(numeric_feature_columns + cat_feature_columns))\n",
-    "print('importances: ', len(result.importances_mean))\n",
-    "print('stds: ', len(result.importances_std))\n",
-    "\n",
-    "# Expanded feature column names\n",
-    "# Version for include previous rating\n",
-    "if 'include_previous_rating' in model_name:\n",
-    "    expanded_cat_cols = ['cat__rating_on_previous_fixed_quarter_date_A',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_AA',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_AAA',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_B',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_BB',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_BBB',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_C',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_CC',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_CCC',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_D',\n",
-    "    'cat__Sector_Communication Services',\n",
-    "    'cat__Sector_Consumer Discretionary',\n",
-    "    'cat__Sector_Consumer Staples',\n",
-    "    'cat__Sector_Energy',\n",
-    "    'cat__Sector_Financials', \n",
-    "    'cat__Sector_Health Care',\n",
-    "    'cat__Sector_Industrials', \n",
-    "    'cat__Sector_Information Technology',\n",
-    "    'cat__Sector_Materials',\n",
-    "    'cat__Sector_Real Estate',\n",
-    "    'cat__Sector_Utilities']\n",
-    "# Version for exclude previous rating\n",
-    "if 'exclude_previous_rating' in model_name:\n",
-    "    expanded_cat_cols = ['cat__rating_on_previous_fixed_quarter_date_A',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_AA',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_AAA',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_B',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_BB',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_BBB',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_C',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_CC',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_CCC',\n",
-    "    'cat__rating_on_previous_fixed_quarter_date_D']\n",
-    "\n",
-    "print('with expanded')\n",
-    "print(len(numeric_feature_columns + expanded_cat_cols))\n",
-    "\n",
-    "print('importances mean')\n",
-    "print(result.importances_mean)\n",
-    "\n",
-    "print('imp std')\n",
-    "print(result.importances_std)\n",
-    "\n",
     "# Put column name, mean and std in a dataframe\n",
-    "result = pd.DataFrame({'feature': numeric_feature_columns + expanded_cat_cols, 'mean': result.importances_mean, 'std': result.importances_std})\n",
+    "result = pd.DataFrame({'feature': feature_names, 'mean': result.importances_mean, 'std': result.importances_std})\n",
     "\n",
     "# Output to disk\n",
     "result.to_parquet('../../../../Output/Modelling/Logistic Regression/' + model_name + '/' + model_name + '_permutation_importance.parquet', index=False)\n",
