now set up to produce predictions + graph nn edits

--- a/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Include Previous Rating/Logistic_Regression_Include_Previous_Rating_Model_3.ipynb
@@ -7487,7 +7487,7 @@
    ],
    "source": [
     "# Evaluate model\n",
-    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name)"
+    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name, target_column, df)"
    ]
   }
  ],
