--- a/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_2.ipynb
+++ b/Code/Modelling/Logistic Regression/Rating Model - Exclude Previous Rating/Logistic_Regression_Exclude_Previous_Rating_Model_2.ipynb
@@ -7745,7 +7745,7 @@
    ],
    "source": [
     "# Evaluate model\n",
-    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name)"
+    "evaluate_model(best_model, X_test_scaled, y_test, custom_mapping, model_name, target_column, df)"
    ]
   }
  ],
